--- a/Labs/Lab_3/lab_3_package/package.xml
+++ b/Labs/Lab_3/lab_3_package/package.xml
@@ -14,6 +14,7 @@
   <depend>geometry_msgs</depend>
   <depend>turtlebot3</depend>
   <depend>turtlebot3_navigation2</depend>
+   <depend>nav2_simple_commander</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
